--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <p style="height: 31px">&nbsp;</p>
 <p style="height: 15px" class="auto-style3"><strong>
 <img alt="" class="auto-style2" "height="103" src="Loops-Background.jpg" width="1000" height="103" /></strong></p>
-<p class="auto-style1" style="height: 73px" align="center"><strong>Hey...., Glad You&#39;re Here!</strong></p>
-
+<p class="auto-style1" style="height: 73px" align="center"><strong>Hey, Glad You&#39;re Here!</strong></p>
+<img src="danigrad.jpg" style="margin:auto;display:block" />
 </body>
 
 </html>
